# aircraft_maintainance

./: README.md  background.md  main.py  package-lock.json  project_development.md  pyproject.toml  requirements.txt  tailwind.config.js
backend/: README.md  ai_service.py  database.py  debug_regex.py  env.example  main.py  minimal_test.py  models.py  routes.py  test_json_parsing.py
backend/prompts/: maintenance_log_analyzer.txt
frontend/: next.config.js  package-lock.json  package.json
frontend/pages/: _app.js  index.js
frontend/src/: App.js  index.css
frontend/src/components/: LogDisplay.js  MainPanel.js  Sidebar.js  UploadArea.js
frontend/src/context/: MaintenanceLogContext.js
