[project]
name = "aircraft-maintainance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "openai>=1.98.0",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "uvicorn>=0.35.0",
]
